k8s/stateful-app/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: stateful-app
spec:
  type: ClusterIP
  selector:
    app: fastapi
  ports:
    - name: http
      port: 80
      targetPort: http
