k8s/stateful-app/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: stateful-app
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
